# itse25webServer

./: README.md  pyproject.toml
src/webserver/: file_handler.py  http_parser.py  logger.py  main.py  request_handler.py  response_builder.py  server.py
src/webserver/html/: 400.html  404.html  500.html  index.html  test.html
