[project]
name = "webserver"
version = "0.1.0"
description = ""
authors = [
    {name = "emilholmgaard",email = "emil@holmgaard.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "netifaces (>=0.11.0,<0.12.0)",
    "uuid (>=1.30,<2.0)",
    "uuid-utils (>=0.11.0,<0.12.0)"
]

[tool.poetry]
packages = [{include = "webserver", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
